starting with HTML

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Damn you World
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="./style.css" type="style">
+    <title>Giothh</title>
+  </head> 
+  <body>
+ 
+    <header>
+    </header>
+    <main>
+      <p>Damn you World</p>
+
+    </main>
+  </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
+
